output/networking/microsoft_network_networksecuritygroups_securityrules/resource-group.bicep
param networkSecurityGroups_nsgzd_p_0so_name string

resource networkSecurityGroups_nsgzd_p_0so_name_resource 'Microsoft.Network/networkSecurityGroups@2025-07-01' = {
  name: networkSecurityGroups_nsgzd_p_0so_name
  location: 'westeurope'
  properties: {
    securityRules: [
      {
        name: 'rulebbsk-0'
        id: networkSecurityGroups_nsgzd_p_0so_name_rulebbsk_0.id
        properties: {
          protocol: 'Tcp'
          sourcePortRange: '*'
          destinationPortRange: '443'
          sourceAddressPrefix: '*'
          destinationAddressPrefix: '*'
          access: 'Allow'
          priority: 100
          direction: 'Inbound'
          sourcePortRanges: []
          destinationPortRanges: []
          sourceAddressPrefixes: []
          destinationAddressPrefixes: []
        }
      }
    ]
  }
}

resource networkSecurityGroups_nsgzd_p_0so_name_rulebbsk_0 'Microsoft.Network/networkSecurityGroups/securityRules@2025-07-01' = {
  name: '${networkSecurityGroups_nsgzd_p_0so_name}/rulebbsk-0'
  properties: {
    protocol: 'Tcp'
    sourcePortRange: '*'
    destinationPortRange: '443'
    sourceAddressPrefix: '*'
    destinationAddressPrefix: '*'
    access: 'Allow'
    priority: 100
    direction: 'Inbound'
    sourcePortRanges: []
    destinationPortRanges: []
    sourceAddressPrefixes: []
    destinationAddressPrefixes: []
  }
  dependsOn: [
    networkSecurityGroups_nsgzd_p_0so_name_resource
  ]
}
